--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Roboto:100,300,400,700");
+@import url('https://fonts.googleapis.com/css?family=Roboto:100,300,400,700');
 * {
   margin: 0;
   padding: 0;
@@ -19,9 +19,11 @@ header {
   height: 80px;
   border-radius: 50%;
   background-color: rgba(116, 112, 112, 0.486);
+  -webkit-transition: 0.4s;
+  -moz-transition: 0.4s;
+  -o-transition: 0.4s;
   transition: 0.4s;
 }
-
 .burger-menu_button:hover .burger-menu_lines {
   filter: brightness(0.7);
 }
@@ -37,35 +39,34 @@ header {
   width: 50px;
   height: 3px;
   background-color: #727272;
+  -webkit-transition: 0.4s;
+  -moz-transition: 0.4s;
+  -o-transition: 0.4s;
   transition: 0.4s;
 }
-
 .burger-menu_lines {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
-
 .burger-menu_lines::before {
-  content: "";
+  content: '';
   top: -12px;
 }
-
 .burger-menu_lines::after {
-  content: "";
+  content: '';
   top: 12px;
 }
+
 
 .burger-menu_active .burger-menu_lines {
   background-color: transparent;
 }
-
 .burger-menu_active .burger-menu_lines::before {
   top: 0;
   transform: rotate(45deg);
 }
-
-.burger-menu_active .burger-menu_lines::after {
+.burger-menu_active .burger-menu_lines::after{
   top: 0;
   transform: rotate(-45deg);
 }
@@ -78,20 +79,24 @@ header {
   display: flex;
   flex-flow: column;
   height: 100%;
-  background-color: rgba(48, 42, 42, 0.5411764706);
+  background-color: #302a2a8a;
   overflow-y: auto;
   right: -100%;
+  -webkit-transition: 0.8s;
+  -moz-transition: 0.8s;
+  -o-transition: 0.8s;
   transition: 0.8s;
 }
-
 .burger-menu_active .burger-menu_nav {
   right: 0;
+  -webkit-transition: 0.4s;
+  -moz-transition: 0.4s;
+  -o-transition: 0.4s;
   transition: 0.4s;
 }
-
 .burger-menu_link {
   padding: 18px 35px;
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-size: 18px;
   text-decoration: none;
   text-transform: uppercase;
@@ -100,15 +105,12 @@ header {
   color: #ffffff;
   border-bottom: 1px solid #fff;
 }
-
 .burger-menu_link:first-child {
   border-top: 1px solid #fff;
 }
-
 .burger-menu_link:hover {
   filter: brightness(0.9);
 }
-
 .burger-menu_overlay {
   display: none;
   position: fixed;
@@ -118,8 +120,9 @@ header {
   height: 100vh;
   z-index: 10;
 }
-
 .burger-menu_active .burger-menu_overlay {
   display: block;
   background-color: rgba(0, 0, 0, 0.5);
-}/*# sourceMappingURL=style.css.map */
+}
+
+
